# mysingle-pack

./: .coverage  .env.example  .pre-commit-config.yaml  AGENTS.md  AGENTS_FOR_SERVICES.md  APP_FACTORY_FLOWCHART.md  APP_FACTORY_USAGE_GUIDE.md  AUTH_DEPS_USAGE_GUIDE.md  AUTH_ENHANCEMENT_PLAN.md  AUTH_MIDDLEWARE_REFACTORING_PLAN.md  AUTH_REFACTORING_SUMMARY.md  CHANGELOG.md  CHANGELOG_PORT_CONFIG.md  DEPLOYMENT_MIGRATION_SUMMARY.md  DSL_ENHANCEMENT_DASHBOARD.md  DSL_ENHANCEMENT_MASTER_PLAN.md  FINAL_INTEGRATION_PLAN.md  FRONTEND_AUTH_DEV_GUIDE.md  GRPC_SERVER_STANDARDIZATION.md  HTTP_CLIENT_GUIDE.md  KONG_API_GATEWAY_CONFIGURATION_GUIDE.md  MYSINGLE_APP_FACTORY_USAGE_GUIDE.md  MYSINGLE_PACK_USAGE_GUIDE.md  PHASE_0_DETAILED_PLAN.md  README.md  REDIS_ENHANCEMENT_PLAN.md  REQUIRED_TASKS_QUANT_PACK.md  SUBSCRIPTION_QUOTA_CACHING_REQUIREMENT.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_REPORT.md  TODOS.md  USAGE_GUIDE.md  buf.gen.yaml  buf.yaml  copilot-instructions.md  copilot-instructions.template.md  coverage.xml  pyproject.toml  pytest.ini  run_tests.sh  (+1 more)
.github/: copilot-instructions.md
.github/workflows/: auto-generate-protos.yml  auto-release.yml  build-publish.yml  build-test.yml  ci-test.yml  proto-ci.yml  validate-code.yml  validate-commits.yml  validate-protos.yml
docs/: MYSINGLE_APP_FACTORY_USAGE_GUIDE.md  MYSINGLE_PACK_USAGE_GUIDE.md  copilot-instructions.md.backup
docs/auth/: API_GATEWAY_CONFIG_GUIDE.md  IAM_SERVICE_GUIDE.md  NON_IAM_SERVICE_GUIDE.md
docs/cicd/: SUBMODULE_PR_WORKFLOW.md
docs/core/: APP_FACTORY_USAGE_GUIDE.md  AUDIT_LOGGING_USAGE_GUIDE.md  COMMON_SETTINGS_GUIDE.md  METRICS_USAGE_GUIDE.md  STRUCTURED_LOGGING_GUIDE.md
examples/: quota_enforcement_app_factory.py
protos/: SERVICE_INTEGRATION_CONSULTING_REPORT.md  SERVICE_INTEGRATION_MIGRATION.md  TARGET_ARCHITECTURE_JOURNEY_ORCHESTRATOR.md  buf.gen.yaml
protos/common/: error.proto  metadata.proto  pagination.proto
protos/services/backtest/v1/: backtest_service.proto
protos/services/genai/v1/: chatops.proto  dsl_validator.proto  ir_converter.proto  narrative.proto  strategy_builder.proto
protos/services/iam/v1/: iam_service.proto
protos/services/indicator/v1/: indicator_service.proto
protos/services/market_data/v1/: market_data_service.proto
protos/services/market_data/v2/: market_data_service.proto
protos/services/ml/v1/: ml_service.proto
protos/services/portfolio/v1/: portfolio_service.proto
protos/services/strategy/v1/: strategy_service.proto
protos/services/subscription/v1/: subscription_service.proto
scripts/: bump_version.py  fix_proto_imports.py  generate_protos.sh  test_imports.py
scripts/phase-0/: fix_cli_imports.py  generate_package_readmes.py  restructure_package.sh  update_internal_imports.py
src/mysingle/: __init__.py  constants.py
src/mysingle/audit/: middleware.py
src/mysingle/auth/: README.md  __init__.py  authenticate.py  cache.py  decorators.py  deps.py  exception_handlers.py  init_data.py  jwt.py  middleware.py  models.py  oauth_manager.py  user_manager.py
src/mysingle/auth/oauth2/: clients.py
src/mysingle/auth/router/: auth.py  oauth2.py  oauth_management.py  register.py  reset.py  users.py  verify.py
src/mysingle/auth/schemas/: auth.py  user.py
src/mysingle/auth/security/: cookie.py  jwt.py
src/mysingle/base/: __init__.py
src/mysingle/cli/: README.md  __init__.py  __main__.py
src/mysingle/cli/core/: __init__.py  auto_version.py  version.py
src/mysingle/cli/protos/: __init__.py  __main__.py  models.py  utils.py
src/mysingle/cli/scaffold/: __init__.py  commands.py  (+1 more)
src/mysingle/clients/: README.md  __init__.py  base_client.py  base_grpc_client.py  http_client.py
src/mysingle/core/: README.md  __init__.py  app_factory.py  config.py  db.py  http_client.py  logging.py  middleware.py  service_types.py
src/mysingle/database/: README.md  __init__.py  cache_factory.py  duckdb_manager.py  redis.py  redis_cache.py
src/mysingle/dsl/: CACHE_MIGRATION_GUIDE.md  README.md  __init__.py  cache.py  errors.py  executor.py  extensions.py  migration.py  proxies.py  runtime_service.py  series.py  stdlib.py  type_system.py  validator.py
src/mysingle/examples/: logging_example.py
src/mysingle/grpc/: README.md  __init__.py  base_grpc_client.py  cache.py  interceptors.py  server.py
src/mysingle/logging/: __init__.py  structured_logging.py
src/mysingle/metrics/: collector.py  router.py
src/mysingle/protos/: README.md  __init__.py
src/mysingle/subscription/: README.md  __init__.py  client.py  decorators.py  exceptions.py  middleware.py  models.py
src/mysingle_quant/auth/: cache.py  deps.py  middleware.py  user_manager.py
src/mysingle_quant/clients/: base_client.py
src/mysingle_quant/core/: app_factory.py  service_types.py
src/mysingle_quant/examples/: logging_example.py
src/mysingle_quant/logging/: structured_logging.py
src/mysingle_quant/metrics/: middleware.py
tests/: README.md  conftest.py  test_audit_middleware.py  test_auth_bypass.py  test_dsl_serialization.py  test_grpc_interceptors.py  test_service_model_initialization.py
tests/auth/: test_auth_bypass.py  test_auth_deps.py  test_models.py  test_security.py
tests/cli/: __init__.py  test_auto_version.py  test_cli_utils.py  test_proto_cli.py  test_proto_commands.py  test_scaffold.py  test_scaffold_templates.py  test_version.py
tests/clients/: __init__.py  test_grpc_client.py  test_http_client.py
tests/core/: test_audit.py  test_audit_middleware.py  test_base_documents.py  test_config.py  test_health.py  test_logging.py  test_metrics.py  test_service_model_initialization.py  test_settings.py
tests/database/: __init__.py  test_duckdb.py  test_mongodb.py
tests/dsl/: __init__.py  test_dsl_params_namespace.py  test_dsl_parser.py  test_dsl_strategy_functions.py  test_extensions.py  test_stdlib.py
tests/grpc/: test_server_cache.py
tests/protos/: test_grpc_interceptors.py  test_proto_import_paths.py  test_proto_imports.py  test_proto_version.py
tests/subscription/: __init__.py  test_client.py  test_decorators.py  test_exceptions.py  test_middleware.py  test_models.py
(+116 files in other folders)
